--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,405 @@
+.header {
+  position: relative;
+  z-index: 100;
+  background-color: transparent;
+}
+.header .light-logo {
+  display: block;
+}
+.header .logo {
+  display: none;
+}
+.header.scrolled {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+}
+.header.scrolled .light-logo {
+  display: none;
+}
+.header.scrolled .logo {
+  display: block;
+}
+.header.scrolled .main-menu li a.nav-link {
+  color: #00A9BD;
+}
+.header.scrolled .language-menu li a.nav-link {
+  color: #00A9BD;
+}
+.header.scrolled .language-menu li a.nav-link.active {
+  color: #00A9BD;
+}
+.header.scrolled .language-menu li a.nav-link.active::after {
+  background-color: #00A9BD;
+}
+.header.scrolled .language-menu li a.nav-link::after {
+  background-color: #00A9BD;
+}
+.header .main-menu li a.nav-link {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  position: relative;
+  display: inline-block;
+  text-align: center;
+}
+.header .main-menu li a.nav-link:hover {
+  opacity: 0.8;
+}
+.header .language-menu li {
+  position: relative;
+  display: block;
+  text-align: center;
+  cursor: pointer;
+}
+.header .language-menu li a.nav-link {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 70px;
+}
+.header .language-menu li a.nav-link.active {
+  text-decoration: none;
+  color: #fff;
+}
+.header .language-menu li a.nav-link.active::after {
+  content: "";
+  position: absolute;
+  top: 65%;
+  height: 2px !important;
+  width: 40%;
+  left: 30%;
+  background-color: #fff;
+  transition: 0.4s ease-out all 0.1s;
+}
+.header .language-menu li a.nav-link.active:hover::after {
+  width: 90%;
+  left: 5%;
+  transition: 0.5s ease all;
+}
+.header .language-menu li a.nav-link::after {
+  content: "";
+  position: absolute;
+  top: 65%;
+  height: 2px !important;
+  width: 0;
+  left: 50%;
+  background-color: #fff;
+  transition: 0.4s ease-out all 0.1s;
+}
+.header .language-menu li a.nav-link:hover::after {
+  width: 90%;
+  left: 5%;
+  transition: 0.5s ease all;
+}
+
+.logo {
+  max-width: 198px;
+}
+
+.main-section {
+  position: relative;
+  top: -134px;
+  padding-top: 250px;
+  background-color: #00A9BD;
+  min-height: 900px;
+  z-index: 1;
+}
+.main-section::after {
+  display: block;
+  position: absolute;
+  top: 0;
+  z-index: 5;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-image: url("../background/Group 1000000795.svg");
+  background-position: top left;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.main-section--img {
+  display: block;
+  position: absolute;
+  top: 470px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  max-width: 918px;
+}
+
+.about-section--one {
+  min-height: 580px;
+  padding-bottom: 80px;
+  background-color: #58595B;
+  position: relative;
+  top: -134px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+}
+.about-section--one::after {
+  content: url("../background/Vector.svg");
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 10%;
+}
+.about-section--one p {
+  color: #fff;
+  font-size: calc(18px + 6 * (100vw - 420px) / 2180);
+  line-height: 1.8;
+  font-weight: 400;
+  text-align: center;
+}
+
+.arrow {
+  display: block;
+  position: absolute;
+  bottom: 10%;
+  right: 15%;
+  cursor: pointer;
+  animation: bounce 0.6s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+}
+
+@keyframes bounce {
+  from {
+    transform: translate3d(0, 0, 0);
+  }
+  to {
+    transform: translate3d(0, 10px, 0);
+  }
+}
+.about-section--two {
+  position: relative;
+  top: -207px;
+  min-height: 465px;
+  background-image: url("../background/bg_section3.png");
+  background-size: auto;
+  background-repeat: no-repeat;
+  padding-top: 200px;
+}
+.about-section--two p {
+  color: #fff;
+  font-size: calc(22px + 18 * (100vw - 420px) / 2180);
+  line-height: 1.8;
+  font-weight: 700;
+  text-align: center;
+}
+
+.about-section--three {
+  position: relative;
+  top: -100px;
+}
+.about-section--three h3 {
+  font-size: calc(28px + 16 * (100vw - 420px) / 2180);
+  line-height: 1.8;
+  font-weight: 400;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.about-section--three .feature {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.about-section--three .feature p {
+  color: #787A7D;
+  font-size: calc(18px + 4 * (100vw - 420px) / 2180);
+  line-height: 1.8;
+  font-weight: 500;
+  text-align: center;
+  padding-top: 80px;
+}
+.about-section--three h2 {
+  font-size: calc(30px + 20 * (100vw - 420px) / 2180);
+  line-height: 1.8;
+  font-weight: 700;
+  text-align: center;
+  color: #58595B;
+  margin-top: 50px;
+}
+
+.about-us-section.row {
+  margin: 0;
+}
+.about-us-section.row div[class*=col-] {
+  padding: 0;
+}
+.about-us-section div[class*=col-] {
+  padding: 0;
+}
+.about-us-section div[class*=col-] .row {
+  margin: 0;
+}
+.about-us-section div[class*=col-] .row .col {
+  padding: 0;
+}
+.about-us-section .eampty.blue-box {
+  background-color: #00A9BD;
+  position: relative;
+}
+.about-us-section .eampty.blue-box::after {
+  content: url("../background/Vector.svg");
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: -20%;
+  z-index: 10;
+}
+.about-us-section .eampty.gray-box {
+  background-color: #787A7D;
+  position: relative;
+}
+.about-us-section .eampty.gray-box::after {
+  content: url("../background/Vector.svg");
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: -20%;
+  z-index: 10;
+}
+.about-us-section .with-img {
+  min-height: 510px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: 50;
+}
+.about-us-section .with-img.left {
+  background-image: url("../public/about-left.png");
+}
+.about-us-section .with-img.left::after {
+  content: url("../public/stamp.png");
+  display: block;
+  position: absolute;
+  top: -20px;
+  right: -30px;
+  z-index: 10;
+}
+.about-us-section .with-img.right {
+  background-image: url("../public/about-right.png");
+}
+.about-us-section .with-img.right::after {
+  content: url("../public/stamp.png");
+  display: block;
+  position: absolute;
+  bottom: -30px;
+  left: -30px;
+  z-index: 10;
+}
+.about-us-section .box {
+  min-height: 255px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.about-us-section .box.blue {
+  background-color: #00A9BD;
+}
+.about-us-section .box.dark-gray {
+  background-color: #58595B;
+}
+.about-us-section .box.light-gray {
+  background-color: #787A7D;
+}
+.about-us-section .box p {
+  color: #fff;
+  font-size: calc(18px + 6 * (100vw - 420px) / 2180);
+  line-height: 1.8;
+  font-weight: 400;
+  text-align: center;
+  display: block;
+  max-width: 620px;
+}
+
+.partners {
+  background-color: #00A9BD;
+  min-height: 520px;
+  display: flex;
+  align-items: center;
+}
+.partners h2 {
+  font-size: calc(30px + 22 * (100vw - 420px) / 2180);
+  line-height: 1.8;
+  font-weight: 700;
+  text-align: center;
+  color: #fff;
+}
+
+.map {
+  filter: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="g"><feColorMatrix type="matrix" values="0.3 0.3 0.3 0 0 0.3 0.3 0.3 0 0 0.3 0.3 0.3 0 0 0 0 0 1 0"/></filter></svg>#g');
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  filter: progid:DXImageTransform.Microsoft.BasicImage(grayScale=1);
+}
+
+footer {
+  background-color: #58595B;
+}
+footer .footer-bottom {
+  background-color: #3C444C;
+}
+footer .footer-bottom span {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.contact-form {
+  /* firefox 19+ */
+  /* ie */
+}
+.contact-form .row {
+  padding-bottom: 10px;
+}
+.contact-form input, .contact-form textarea {
+  display: block;
+  outline: none;
+  border: none;
+  height: 2em;
+  font-size: 16px;
+  margin-bottom: 1px;
+  border-bottom: 1px solid #fff;
+  border-radius: 0;
+  background-color: transparent;
+}
+.contact-form input:focus, .contact-form textarea:focus {
+  border-bottom: 1px solid #fff;
+  background-color: transparent;
+}
+.contact-form ::-webkit-input-placeholder {
+  color: #fff;
+}
+.contact-form ::-moz-placeholder {
+  color: #fff;
+}
+.contact-form :-ms-input-placeholder {
+  color: #fff;
+}
+.contact-form input:-moz-placeholder {
+  color: #fff;
+}
+
 body {
   font-family: "Manrope", sans-serif;
+  margin: 0 auto;
+}
+
+.container {
+  max-width: 1480px;
+}
+
+h1 {
+  font-family: "Manrope", sans-serif;
+  font-size: calc(32px + 28 * (100vw - 420px) / 2180);
+  font-weight: 800;
+  color: #fff;
+  text-align: center;
 }
 
 /*# sourceMappingURL=main.css.map */
