--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,20 @@
-$main-font : 'Manrope', sans-serif;
+@import "header.scss";
+@import "main-section.scss";
+@import "about-section.scss";
+@import "map-section.scss";
+@import "footer.scss";
+$primary-font : 'Manrope', sans-serif;
 body {
-  font-family: $main-font;
-
+  font-family: $primary-font;
+  margin: 0 auto;
+}
+.container {
+  max-width: 1480px;
+}
+h1 {
+  font-family: $primary-font;
+  font-size: calc(32px + (60 - 32) * ((100vw - 420px) / (2600 - 420)));
+  font-weight: 800;
+  color: #fff;
+  text-align: center;
 }
