--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -26,13 +26,37 @@ footer {
         border-bottom: 1px solid #fff;
         border-radius: 0;
         background-color: transparent;
+        caret-color: #fff;
+        color: #fff;
         &:focus {
             border-bottom: 1px solid #fff;
             background-color: transparent; 
+            color: #fff;
         }
     }
     ::-webkit-input-placeholder { color:#fff; }
     ::-moz-placeholder { color:#fff; } /* firefox 19+ */
     :-ms-input-placeholder { color:#fff; } /* ie */
     input:-moz-placeholder { color:#fff; }
+    .text-modified {
+        color: #fff;
+    }
+    @media screen and(max-width: 768px) {
+        margin-top: 30px;
+    }
+}
+.btn-send {
+    color: #fff;
+    background-color: $primary-color;
+    font-size: 18px;
+    font-weight: 400;
+    padding: 5px 25px;
+    border-radius: 0;
+    margin-top: 20px;
+}
+@media screen and(max-width: 768px) {
+    .logo-box, .form-box, .footer-text-box {
+        width: 100%;
+        justify-content: center!important;
+    }
 }
