--- a/src/scss/main-section.scss
+++ b/src/scss/main-section.scss
@@ -5,7 +5,7 @@ $secondary-color: #58595B;
     top: -134px;
     padding-top:250px;
     background-color: $primary-color;
-    min-height: 900px;
+    min-height: 800px;
     z-index: 1;
     &::after {
         display: block;
@@ -22,11 +22,13 @@ $secondary-color: #58595B;
     }
     &--img {
         display: block;
-        position: absolute;
-        top: 470px;
-        left: 50%;
-        transform: translateX(-50%);
+        position: relative;
+        top: 160px;
+        margin: 0 auto;
         width: 100%;
         max-width: 918px;
+        @media screen and(max-width: 992px) {
+            top: 50px;
+        }
     }
 }
