--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -23,6 +23,9 @@ footer {
 .contact-form {
     .row {
         padding-bottom: 10px;
+        @media screen and(max-width: 768px) {
+            padding-bottom: 0;
+        }
     }
     input, textarea {
         display: block;
