--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -21,7 +21,7 @@ $primary-color: #00A9BD;
         width: 100%; 
         background-color: #fff;
         &.desktop >div {
-            padding: 0;
+            padding: 10px 0;
         }
         .light-logo {
             display: none;
@@ -149,6 +149,59 @@ $primary-color: #00A9BD;
                 .burger-menu {
                     .burger-strip div {
                         background: $primary-color;
+                    }
+                }
+                .language-menu {
+                    li {
+                        position: relative;
+                        display: block;
+                        text-align: center;
+                        cursor: pointer;
+                        a.nav-link {
+                            color: #fff;
+                            font-size: 18px;
+                            font-weight: 700;
+                            line-height: 70px;
+                            &.active {
+                                text-decoration: none;
+                                color: #fff;
+                                &::after {
+                                    content: "";
+                                    position: absolute;
+                                    top: 65%;
+                                    height: 2px !important;
+                                    width: 40%;
+                                    left: 30%;
+                                    background-color: #fff;
+                                    transition: 0.4s ease-out all .1s;
+                                }
+                                &:hover {
+                                    &::after {
+                                        width: 90%;
+                                        left: 5%;
+                                        transition: 0.5s ease all;
+                                    }
+                                }
+                            }
+                            &::after {
+                                content: "";
+                                position: absolute;
+                                top: 65%;
+                                height: 2px !important;
+                                width: 0;
+                                left: 50%;
+                                background-color: #fff;
+                                transition: 0.4s ease-out all .1s;
+                            }
+                            &:hover {
+                                &::after {
+                                    width: 90%;
+                                    left: 5%;
+                                    transition: 0.5s ease all;
+                                }
+                            }
+                            
+                        }
                     }
                 }
             }
