--- a/src/scss/main-section.scss
+++ b/src/scss/main-section.scss
@@ -26,6 +26,7 @@ $secondary-color: #58595B;
     &--img {
         display: block;
         position: relative;
+        z-index: 500;
         top: 160px;
         margin: 0 auto;
         width: 100%;
